# etl-io

./: Cargo.toml  README.md  todo.md
examples/: pipeline.rs  postgres.rs  simple.rs  simple_1.rs  simple_2.rs  yfinance.rs
examples/postgres-dev/: Cargo.toml  docker-compose.yml  perf.data  perf.data.old  shell.nix
examples/postgres-dev/migrations/: up.sql
examples/postgres-dev/src/: main.rs  model.rs  schema.rs
examples/scylla-dev/: Cargo.toml  docker-compose.yml
examples/scylla-dev/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: default.rs  error.rs  etl.rs  lib.rs  pipe.rs
src/db/: couchdb.rs  mod.rs  postgresql.rs
tests/: db.rs  dbs.yml
