workspace = { members = [ "examples/postgres-dev", "examples/scylla-dev", "macros" ] }
[package]
name = "pipe-io"
version = "0.1.0"
edition = "2021"
authors = ["Vostanis <vostanis@proton.me>"]
description = "An ETL framework."
keywords = ["ETL", "pipe", "pipeline", "data", "engineer", "engineering", "database", "io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pipe_io"
path = "src/lib.rs"

[dependencies]
macros = { path = "./macros" }
anyhow = "1.0.81"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full", "test-util"] }
tokio-postgres = "0.7.10"
scylla = "0.12.0"
diesel = { version = "2.1.6", features = ["postgres"] }
dotenv = "0.15.0"
tokio-pg-mapper = "0.2.0"

[dev-dependencies]
chrono = "0.4.37"
tokio = { version = "1.37.0", features = ["full"] }
