[package]
name = "postgres-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
diesel = { version = "2.1.6", features = ["postgres"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio-postgres = "0.7.10"
